--- a/package.json
+++ b/package.json
@@ -3,17 +3,13 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": "",
   "dependencies": {
-    "axios": "^1.9.0",
-    "discord.js": "^14.19.3",
-    "dotenv": "^16.5.0",
-    "node-cron": "^4.1.0",
-    "rss-parser": "^3.13.0"
+    "axios": "^1.6.7",
+    "discord.js": "^14.13.0",
+    "dotenv": "^16.3.1",
+    "node-cron": "^3.0.2",
+    "rss-parser": "^3.12.0"
   }
 }
