--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "axios": "^1.6.7",
     "discord.js": "^14.13.0",
     "dotenv": "^16.3.1",
+    "express": "^5.1.0",
     "node-cron": "^3.0.2",
     "rss-parser": "^3.12.0"
   }
