--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "market-bot",
   "version": "1.0.0",
+  "description": "Bot de Discord que muestra tendencias de criptomonedas y noticias cripto",
   "main": "index.js",
   "scripts": {
     "start": "node index.js"
@@ -9,8 +10,19 @@
     "axios": "^1.6.7",
     "discord.js": "^14.13.0",
     "dotenv": "^16.3.1",
-    "express": "^5.1.0",
+    "express": "^4.18.2",
     "node-cron": "^3.0.2",
     "rss-parser": "^3.12.0"
-  }
+  },
+  "engines": {
+    "node": ">=16.0.0"
+  },
+  "keywords": [
+    "discord",
+    "bot",
+    "criptomonedas",
+    "noticias"
+  ],
+  "author": "emptywhity",
+  "license": "MIT"
 }
