--- a/package.json
+++ b/package.json
@@ -1,28 +1,15 @@
 {
-  "name": "market-bot",
+  "name": "crypto-advanced-bot",
   "version": "1.0.0",
-  "description": "Bot de Discord que muestra tendencias de criptomonedas y noticias cripto",
   "main": "index.js",
   "scripts": {
     "start": "node index.js"
   },
   "dependencies": {
-    "axios": "^1.6.7",
-    "discord.js": "^14.13.0",
-    "dotenv": "^16.3.1",
-    "express": "^4.18.2",
-    "node-cron": "^3.0.2",
+    "axios": "^1.6.0",
+    "discord.js": "^14.0.0",
+    "dotenv": "^16.0.0",
+    "node-cron": "^3.0.0",
     "rss-parser": "^3.12.0"
-  },
-  "engines": {
-    "node": ">=16.0.0"
-  },
-  "keywords": [
-    "discord",
-    "bot",
-    "criptomonedas",
-    "noticias"
-  ],
-  "author": "emptywhity",
-  "license": "MIT"
+  }
 }
