--- a/package.json
+++ b/package.json
@@ -7,9 +7,12 @@
   },
   "dependencies": {
     "axios": "^1.6.0",
+    "ccxt": "^4.4.88",
     "discord.js": "^14.0.0",
     "dotenv": "^16.0.0",
     "node-cron": "^3.0.0",
-    "rss-parser": "^3.12.0"
+    "node-fetch": "^2.7.0",
+    "rss-parser": "^3.12.0",
+    "technicalindicators": "^3.1.0"
   }
 }
